<resources>
    <string name="sync_end">Sync end.</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <string name="github_repository">GitHub Repo</string>
    <string name="word_count">Word count</string>
    <string name="characters_no_spaces">Characters(no space):</string>
    <string name="characters_without_spaces">Characters(with space):</string>
    <string name="words">Words:</string>
    <string name="write_something">Feel free to write.</string>
    <string name="saved_picture_to">Saved image to:</string>
    <string name="before_minute" formatted="false">%d\u0020minutes ago</string>
    <string name="before_hour" formatted="false">%d\u0020hours ago</string>
    <string name="before_day" formatted="false">%d\u0020days ago</string>
    <string name="before_month" formatted="false">%d\u0020months ago</string>
    <string name="before_year" formatted="false">%d\u0020years ago</string>
    <string name="just_now">moments ago</string>
    <string name="before_half_hour">half hour ago</string>
    <string name="recycle_bin">Trash</string>
    <string name="initial">Initializing…</string>
    <string name="operate">Upgrading,please wait…</string>
    <string name="month1">JANUARY.</string>
    <string name="month2">FEBRUARY.</string>
    <string name="month3">MARCH.</string>
    <string name="month4">APRIL.</string>
    <string name="month5">MAY.</string>
    <string name="month6">JUNE.</string>
    <string name="month7">JULY.</string>
    <string name="month8">AUGUST.</string>
    <string name="month9">SEPTEMBER.</string>
    <string name="month10">OCTOBER.</string>
    <string name="month11">NOVEMBER.</string>
    <string name="month12">DECEMBER.</string>
    <string name="day1">壹日</string>
    <string name="day2">贰日</string>
    <string name="day3">叁日</string>
    <string name="day4">肆日</string>
    <string name="day5">伍日</string>
    <string name="day6">陆日</string>
    <string name="day7">柒日</string>
    <string name="day8">扒日</string>
    <string name="day9">玖日</string>
    <string name="day10">拾日</string>
    <string name="day11">拾壹</string>
    <string name="day12">拾贰</string>
    <string name="day13">拾叁</string>
    <string name="day14">拾肆</string>
    <string name="day15">拾伍</string>
    <string name="day16">拾陆</string>
    <string name="day17">拾柒</string>
    <string name="day18">拾扒</string>
    <string name="day19">拾玖</string>
    <string name="day20">贰拾</string>
    <string name="day21">贰拾壹</string>
    <string name="day22">贰拾贰</string>
    <string name="day23">贰拾叁</string>
    <string name="day24">贰拾肆</string>
    <string name="day25">贰拾伍</string>
    <string name="day26">贰拾陆</string>
    <string name="day27">贰拾柒</string>
    <string name="day28">贰拾扒</string>
    <string name="day29">贰拾玖</string>
    <string name="day30">叁拾</string>
    <string name="day31">叁拾壹</string>
    <string name="tip0">强烈推荐您于设置中开启本应用独有的王牌功能：闪电摘录。\n仅需复制，就能快速保存一条新笔记。回想起来，我开发这款应用的初衷就是要实现这个功能吧:)</string>
    <string name="tip_optional">回归初心，化繁为简。\n出于这点，我对整个应用进行了从内而外的修改。除了提升性能以外，原本的左滑菜单被长按所取代。极简笔记一直在进步，如有任何建议敬请反馈。</string>
    <string name="tip1">人生苦短，想做的事如果不迅速付诸行动，99% 都会无疾而终哦(・8・)</string>
    <string name="tip2">Thank you for downloading PureNote,the following are some tips：\nLong press to operate plural notes\nSlide right to open drawer where you can create group,and long press group to rename it.\nTo view more functions in Settings page.\nLast,feel free to feedback any opinions and suggestions</string>
    <string name="tip3">亲爱的用户：为了今后的功能拓展，自2.1.8版本起极简笔记采用了新的文本解析技术，如您的旧有笔记在新版中出现乱码，烦请将绑定EverNote帐号，同步所有数据至云端，然后卸载应用、重新下载、安装同步即可恢复正常，不便之处还请见谅。</string>
    <string name="date_error">Invalidate date</string>
    <string name="one_reminder">\u0020reminder is counting down.</string>
    <string name="more_reminder">\u0020reminders are counting down.</string>
    <string name="password_title">Start Password guard</string>
    <string name="stop_password_title">Stop Password guard</string>
    <string name="new_password">Password:</string>
    <string name="confirm_password">Confirm:</string>
    <string name="hint_password">Hint:</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="app_name">PureNote</string>
    <string name="action_search">Search</string>
    <string name="action_plus">Plus</string>
    <string name="edit_date">Edit date</string>
    <string name="action_change_mode">Change</string>
    <string name="action_trash">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_remind">Reminder</string>
    <string name="action_cancel_remind">Cancel reminder</string>
    <string name="action_share">Share</string>
    <string name="action_move">Move</string>
    <string name="action_setting">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_evaluate">Evaluate</string>
    <string name="action_about">About</string>
    <string name="bind_evernote">Bind EverNote</string>
    <string name="syn_evernote">Synchronize data</string>
    <string name="menu_search">Search</string>
    <string name="delete_text">Confirm delete？</string>
    <string name="logout_text">Confirm logout EverNote?</string>
    <string name="all_notes">ALL NOTES</string>
    <string name="folder_cancel">Cancel</string>
    <string name="folder_delete_num">Delete(%1$s)</string>
    <string name="folder_delete">Delete</string>
    <string name="folder_new">New</string>
    <string name="create_folder_title">New group</string>
    <string name="delete_folder_title">Delete group?</string>
    <string name="create_folder">Create</string>
    <string name="create_folder_err">Fail to create group!</string>
    <string name="rename_folder_title">Rename group</string>
    <string name="rename_folder_err">Fail to rename group!</string>
    <string name="logout_evernote_username_null">Logout</string>
    <string name="comment_purenote">Rate PureNote</string>
    <string name="donate_developer">Donate developer</string>
    <string name="donate_me_tip">Feel free to donate,give me motive power to improve PureNote\n(・8・)\n~～Click here to save image～~</string>
    <string name="password_guard_on">On</string>
    <string name="password_guard_off">Off</string>
    <string name="lightning_extract_on">On</string>
    <string name="switch_lightning_extract_on">Start LightningExtract</string>
    <string name="lightning_extract_off">Off</string>
    <string name="switch_lightning_extract_off">Stop LightningExtract</string>
    <string name="lightning_extract_save_location">Choose the save location</string>
    <string name="alert_stop_lightning_extract">Confirm stop service?</string>
    <string name="alert_restart_lightning_extract">Start LightningExtract</string>
    <string name="proudly">Copyright © 2015 PureNote\nMade with love by Duanze</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="rate_for_purenote">Enjoy PureNote？</string>
    <string name="rate_rate">Rate it</string>
    <string name="rate_feedback">No,not good…</string>
    <string name="dont_care">Later</string>
    <string name="general_settings">General</string>
    <string name="login_evernote">Login EverNote</string>
    <string name="logout_evernote">%1$s Logout</string>
    <string name="activity_need_recreate">activity_need_recreate</string>
    <string name="choose_theme_title">Choose theme</string>
    <string name="choose_theme_key">choose_theme_key</string>
    <string name="concentrate_write_title">Focus on writing</string>
    <string name="concentrate_write_summary">If this is on,listen to SoftInput so that hide title when writing.</string>
    <string name="concentrate_write_key">concentrate_write_key</string>
    <string name="one_column_title">Single column</string>
    <string name="one_column_summary">After check it,the notes just organize into one column.</string>
    <string name="one_column_key">one_column_key</string>
    <string name="create_order_title">Sort order</string>
    <string name="create_order_summary">After check it,the notes are sorted by create time.</string>
    <string name="create_order_key">create_order_key</string>
    <string name="note_max_length_title">Note height</string>
    <string name="note_max_length_summary">The max height depends on the height ratio that value is between 0.05 and 0.75.</string>
    <string name="note_max_length_key">note_max_length_key</string>
    <string name="note_max_length_default">0.418</string>
    <string name="note_max_length_min">0.05</string>
    <string name="note_max_length_max">0.75</string>
    <string name="note_max_length_dialog_title">Input height ratio</string>
    <string name="password_guard">Password Guard</string>
    <string name="validate_password">Validate password:</string>
    <string name="password_guard_summary">Set a startup password to secure you notes.</string>
    <string name="password_guard_key">password_guard</string>
    <string name="universal_password">Universal password</string>
    <string name="universal_password_summary">In case of forget password.</string>
    <string name="universal_password_key">use_universal_password</string>
    <string name="notification_tools">Notification tools</string>
    <string name="notification_always_show">Resident notification</string>
    <string name="notification_always_show_summary">Some devices maybe should give permissions to make it work well.</string>
    <string name="notification_always_show_key">"notification_always_show_key"</string>
    <string name="lightning_extract">LightningExtract</string>
    <string name="lightning_extract_summary">If this is on，listen to clipboard so that you can save a note by copy.</string>
    <string name="lightning_extract_key">lightning_extract</string>
    <string name="extract_location">LightningExtract - Save location</string>
    <string name="extract_location_key">lightning_extract_save_location</string>
    <string name="quick_write">QuickWrite</string>
    <string name="quick_write_summary">Along with the notification startup,click to write a new note.</string>
    <string name="quick_write_location">QuickWrite - Save location</string>
    <string name="quick_write_location_key">quick_write_location_key</string>
    <string name="extract_error">Error when extract,please restart this function.</string>
    <string name="read_save_location_error">Error when get save path!</string>
    <string name="already_extract_to">Extracted to\u0020</string>
    <string name="no_reminder">No reminder.</string>
    <string name="delete_confirm">Confirm delete?</string>
    <string name="delete_all_confirm">Delete all notes selected？</string>
    <string name="delete_select_nothing">Selected nothing</string>
    <string name="selected_one_count">Selected %1$d item</string>
    <string name="selected_more_count">Selected %1$d items</string>
    <string name="select_all">Select all</string>
    <string name="title_activity_license">Licenses</string>
    <string name="mode_new">New Note</string>
    <string name="mode_edit">Edit Note</string>
    <string name="mode_view">View Note</string>
    <string name="notification_quick_write">New</string>
    <string name="notification_lightning_extract_on">Ext</string>
    <string name="notification_lightning_extract_off">Hold</string>
    <string name="search_note">Search</string>
    <string name="password_guard_stop">Password guard off</string>
    <string name="password_error">Password incorrect</string>
    <string name="password_guard_start">Password guard on</string>
    <string name="passwords_differ">Entered passwords differ!</string>
</resources>